--- a/Payway.Services/Payway.Services.csproj
+++ b/Payway.Services/Payway.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Payway.Entity\Payway.Entity.csproj" />
     <ProjectReference Include="..\Payway.Persistence\Payway.Persistence.csproj" />
   </ItemGroup>
