--- a/Payway/Payway.csproj
+++ b/Payway/Payway.csproj
@@ -12,12 +12,22 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
+    <PackageReference Include="RotativaCore" Version="3.0.0" />
   </ItemGroup>
 
 
   <ItemGroup>
     <ProjectReference Include="..\Payway.Entity\Payway.Entity.csproj" />
     <ProjectReference Include="..\Payway.Services\Payway.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="WkHtmlToPdf\wkhtmltoimage.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="WkHtmlToPdf\wkhtmltopdf.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
